# chat-app

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  start.ps1
backend/: .env.example  Dockerfile  docker-entrypoint.sh  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: app.ts  index.ts
backend/src/config/: env.ts  redis.ts
backend/src/controllers/: auth.controller.ts  chat.controller.ts  message.controller.ts  user.controller.ts
backend/src/middleware/: auth.middleware.ts  error.middleware.ts  validate.middleware.ts
backend/src/routes/: index.ts
backend/src/services/: auth.service.ts  chat.service.ts  media.service.ts  message.service.ts  presence.service.ts
backend/src/socket/: index.ts
backend/src/utils/: jwt.ts  logger.ts  response.ts
cmake/: Config.cmake.in  cmake_uninstall.cmake.in
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/auth/: AuthForms.tsx
frontend/src/components/chat/: ChatHeader.tsx  ChatList.tsx  ChatWindow.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  NewChatModal.tsx
frontend/src/hooks/: useMessages.ts  useSocket.ts
frontend/src/lib/: api.ts  socket.ts
frontend/src/store/: auth.store.ts  chat.store.ts
frontend/src/types/: index.ts
include/: auth_utils.hpp  chat_room.hpp  chat_session.hpp  config.hpp  user_manager.hpp
include/features/: typing_indicator.hpp
include/ui/: components.hpp
nginx/: nginx.conf
src/: chat_room.cpp  chat_session_impl.cpp
